# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Fixed
- [API_PARSER] [SENTINEL_ONE_GRAPH] Fix error if a MITRE tactic or technique is None
- [API_PARSER] [SENTINEL_ONE_GRAPH] Fix the error when alert is None in the result of the alert details request


## [2.34.3] - 2025-12-05
### Added
- [API_PARSER] [ARMIS_CENTRIX] Add source and destination boundaries in resulting logs
- [FRONTEND] [FILEBEAT] Add a comment line with the associated frontend in generated configurations
### Changed
- [API_PARSER] [ARMIS_CENTRIX] Limit fetch quantity while testing collector
- [API_PARSER] [TRENDMICRO_VISIONONE] Drop too long fields
### Fixed
- [SCRIPTS] [PKG_UPGRADE] Inacurate scripts ordering


## [2.34.2] - 2025-11-24
### Fixed
- [API_PARSER] [UBIKA] Avoid concurrent runs of collector
- [API_PARSER] [GATEWATCHER_ALERTS] Avoid collect getting stuck when delay is over 24h


## [2.34.1] - 2025-11-14
### Fixed
- [API_PARSER] [VECTRA] Fix key error when there is no log during 24 hours


## [2.34.0] - 2025-11-10
### Added
- [API_PARSER] [CNAPP_WIZ] New collector
- [SCRIPTS] [REFRESH_NIC] Support CARP configuration import from rc.conf
- [LOG_FORWARDER] [HIREDIS] Make TLS configurable for HIREDIS from GUI
- [FRONTEND] [HIREDIS] Make TLS configurable for REDIS Listeners from GUI
### Changed
- [GUI] [NETIF] Show CARP information for addresses imported from rc.conf (support for externally managed CARP)
### Fixed
- [API_PARSER] [VECTRA] Use separate timestamps for log kinds to avoid missing log
- [SCRIPTS] [REFRESH_NIC] Correctly parse complex rc.conf ifconfig entries
- [MIDDLEWARE] [OS] Wrongly report that node is not bootstrapped
- [GUI] Multiple requests sent on task lists toggle
- [FRONTEND] [GUI] Wrongly display redis settings on filebeat configuration change
